syntax = "proto3";

package eth.ens.v1;

message Domains {
  repeated Domain domains = 1;
}

message Domain {
    string name = 1;
    string label_name = 2;
    bytes label_hash = 3;
}

message Account {
  string address = 1;
}

message NameTransfers {
  repeated NameTransfer name_transfers = 1;
}

message NameTransfer {
  Account from = 1;
  Account to = 2;
  string token_id = 3;
  bytes tx_hash = 5;
  uint64 block_number = 4;
  uint32 log_index = 6;
}